---
version: 0.56_02
date:    Thu Jul 10 04:13:56 BST 2014
changes:
- Make depend on Inline 0.56.
---
version: 0.56_01
date:    Thu Jul 10 01:21:08 BST 2014
changes:
- Merge in changes to inline-pm repo since this was split off.
---
version: 0.54
date:    Thu Jun 26 10:22:29 PDT 2014
changes:
- First release of Inline::C as its own distribution.
---
version: 0.53_01
date:    Thurs 20 Feb 2014
changes:
- C-Cookbook.pod - Rewrite Soldier example as per suggestion provided at
  http://www.perlmonks.org/?node_id=924969. Thanks ikegami.  Nothing wrong with
  the code it replaces - but this revised rendition is probably more easily
  understood.
---
version: 0.53_01
date:    Thurs 26 Sep 2013
changes:
- Have t/21read_DATA.t and t/22read_DATA_2.t use different build directories
  and modify C/Makefile.PL so that those directories are cleaned up by 'make
  clean'. Small alterations to the t/25proto.t tests to avoid 'main::foo
  redefined' warnings.
---
version: 0.53_01
date:    Thurs 12 Sep 2013
changes:
- C.pm - Add support for PROTOTYPES and PROTOTYPE keywords.
- Update version to 0.53_01
---
version: 0.53_01
date:    Tues 27 Aug 2013
changes:
- C/C-Cookbook.pod - Fix "Multiple Return Values" recipe. (Was emitting
  compiler warnings; also segfaulted on some platforms.)
---
version: 0.53_01
date:    Thurs 15 Aug 2013
changes:
- Add C/t/24prefix.t
---
version: 0.53
date:    Wed 1 May 2013
changes:
- Version 0.53 released to CPAN
- Add C/t/23validate.t test script.
---
version: 0.52_02
date:    Wed 24 Apr 2013
changes:
- Version 0.52_02 released to CPAN
- C.pm - Small tweak to setting of $o->{ILSM}{MAKEFILE}{INC} in validate() sub.
  Thanks, Ian Goodacre. (Ticket #11748.)
---
version: 0.52_01
date:    Thurs 11 Apr 2013
changes:
- Version 0.52_01 released to CPAN
---
version: 0.52
date:    Thurs 07 Mar 2013
changes:
- Version 0.52 released to CPAN.
- C-Cookbook.pod - Change the "Object Oriented Inline" example so that it